# applicant

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  HANDOFF.md  HARVEST-INVENTORY.md  LICENSE  NOTICE  README.md  REASONIX.md  SOUL.md  THIRD_PARTY_LICENSES.md  _g16_update_im.py  _g16_update_repos.py  alembic.ini  contrast-audit-results.json  pyproject.toml  surface-verify-results.json
.a0proj/: project.json
.a0proj/memory/: index.faiss  index.faiss.sha256  index.pkl  knowledge_import.json
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml  support_question.yml
.github/workflows/: ci-cross-browser.yml  ci-eval.yml  ci-integration.yml  ci-visual.yml  ci.yml  release.yml
.reasonix/commands/: gate.md  kickoff.md  wave.md
a0-applicant/: plugin.yaml
a0-applicant/api/: agent_runs.py  attributes.py  audit.py  automation.py  base_resume.py  campaigns.py  channels.py  chat.py  compare.py  connections.py  conversion.py  criteria.py  demo.py  digest.py  discovery.py  documents.py  dormant.py  easy_apply.py  features.py  feedback.py  fonts.py  gallery.py  health.py  hello.py  help.py  interview_prep.py  local_only_status.py  mind.py  model_endpoints.py  notifications.py  onboarding.py  ops.py  pending.py  privacy.py  research.py  savejob.py  screening.py  takeover.py  tiers.py  tracker.py  (+2 more)
a0-applicant/config/: help_content.yaml
a0-applicant/prompts/: agent_guidance.md
a0-applicant/webui/: activity.html  applicant-theme.css  attributes.html  audit.html  automation.html  campaigns.html  channels.html  chat.html  compare.html  config.html  connections.html  conversion.html  criteria.html  demo.html  digest.html  discovery.html  documents.html  dormant.html  easy_apply.html  feedback.html  fonts.html  gallery.html  health.html  help.html  interview_prep.html  main.html  mind.html  model_endpoints.html  notifications.html  ops.html  privacy.html  research.html  savejob.html  screening.html  shortcuts.html  takeover.html  tiers.html  today.html  tracker.html  update.html  (+1 more)
a0-webui/: README.md  index.html  login.html
a0-webui/js/: manifest.json
branding/: string-map.env
config/: hardware_profiles.yaml  intel_escalation.yaml  intel_orchestration.yaml  intel_planes.yaml  intel_sampling.yaml  intel_tiers.yaml  migration_matrix.yaml
docker/: Dockerfile  Dockerfile.a0  docker-compose.prod.yml  docker-compose.yml  updater.Dockerfile
docker/postgres/: init.sql
docker/webtop-chrome/: Dockerfile
docker/webtop-gnome/: Dockerfile
docker/webtop-pantheon/: Dockerfile
docs/: APPLICANT-SURVIVAL-PLAN.md  BACKLOG-MIGRATION.md  HARVEST-DRAFTS-ARCH-AND-SPEC.md  HARVEST-MAP.md  HARVEST-UIKIT-MAP.md  HARVEST-WAVE-FEATURES.md  agent-zero-plane-map.md  architecture.md  autonomous-agent-howto.md  backup-restore.md  chat-onboarding.md  competitive-teardown.md  data-model.md  deepseek-implementation-guide.md  deepseek-wave-plan.md  delivery-status.md  discovery-source-reliability.md  dormant-surfaces.md  email-deliverability.md  extending.md  faq.md  frontend-audit-protocol.md  frontend.md  install-targets.md  integration-runner-setup.md  issue-acceptance-traceability.md  known-issues.md  licensing.md  live-takeover-test-protocol.md  onboarding-intake.md  open-items.md  overview.md  performance-budget.md  platform-matrix.md  playtest-protocol.md  playtest-report.md  positioning.md  private-mode.md  production-smoke.md  release-process.md  (+11 more)
docs/adr/: 0001-hexagonal.md  0002-dbos.md  0003-latex-primary.md  0004-automated-account-creation.md  0005-computer-use-cua-driver.md  0006-agent-intelligence-port.md  0007-third-party-license-reuse-gate.md
docs/backlog/: agent-zero-port.md  az-port-intelligence-routing.md  az-release-readiness.md  az-shell-traceability.md  az0-kickoff-prompt.md  az6-migration-matrix.md  az7-lane-baseline.md  intel-envelope.md  intel-escalation.md  intel-orchestration.md  intel-planes.md  intel-routing.md  intel-sampling.md  intel-tier-topology.md  lane-mock-and-real-creds.md  panel-security-hardening-audit.md  road-to-market.md
docs/design/: APPLE_GENIUS.md  APPLICANT_FEATURE_MAP.md  CORPUS_DIGEST_hig_a_m.md  CORPUS_DIGEST_hig_n_z.md  CORPUS_DIGEST_liquid_glass.md  JOURNEY_MAP.md  agent-zero-user-journey.md  competitive-research.md  plan-as-data-architecture.md  plan-as-data.md  realtime-websocket.md  skyvern-parity-gaps.md
docs/notes/: phase3-requests.md
docs/ops/: companion-headless.md  front-door-retirement.md  front-door-rollback.md  session-close-2026-07-22.md
docs/plans/: real-workday-prefill-and-credentials.md
docs/proof/: ats-parseability.md  citable-invariants.md  demo-script.md  p1-live-verification.md
docs/security/: h-invariants-reaudit.md  injection-review.md
docs/spec/: agent-intelligence.md  computer-use.md  master-spec.md  ui-kit-migration.md
docs/studies/: 2026-07-07-parse-verify-tier-study.md
docs/vendor-sync/: ui-fork-cherry-pick.md
frontend/static/: app.js  index.html  login.html  manifest.json  style.css  sw.js
playtest-screens/: crawl-results.json
scripts/: apply-branding.sh  backup-restore-drill.sh  backup.sh  build_docs_site.py  contrast_audit.py  diag.sh  diagnostic-bundle.sh  i18n_extract.py  install.sh  journey_via_sidebar.py  playtest_crawl.py  playtest_panels.py  proxmox-deploy.sh  restore.sh  seed_demo.py  setup-integration-runner.sh  update.sh  updater-daemon.sh  vendor-sync.sh  verify_surfaces.py
scripts/ci/: check_release_version.py  secret_scan.py
scripts/diagnostics/: api_test.py  check_panel.py  digest_probe.py  err_probe.py  journey_crawl.py  journey_shell.py  shell_check.py
scripts/lib/: backup-common.sh  (+1 more)
tests/: conftest.py
translations/: README.md  es-ES.json
workspace/: .dockerignore  .env.example  .gitignore  ACKNOWLEDGMENTS.md  APPLICANT_INTEGRATION.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  app.py  applicant-ui.service  build-macos-app.sh  docker-compose.yml  firehouse-ui.service  install-service.sh  launch-windows.ps1  package-lock.json  package.json  setup.py  start-macos.sh
(+2209 files in other folders)
