[project]
name = "applicant"
version = "0.1.0"
description = "Applicant — autonomous, human-in-the-loop job-application agent (hexagonal core)."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "MIT" }
authors = [{ name = "Applicant" }]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy>=2",
    "alembic",
    "psycopg[binary]",
    "pydantic",
    "pydantic-settings",
    "structlog",
    "httpx",
    # Durable orchestration backbone (FR-DUR-3). Installs cleanly on 3.11.
    # The DEFAULT durable_orchestration adapter is a DB/file-backed checkpoint
    # shim (works without a running Postgres, so the test suite is green);
    # the DBOS-backed adapter is selected in real deployments.
    "dbos",
    # LangGraph is the reasoning loop *within* durable steps (architecture §3.15).
    "langgraph",
    # Base-resume parsing for the onboarding attribute-cloud bootstrap (FR-ONBOARD-3).
    # python-docx parses .docx; pypdf is a pure-python PDF text extractor (cheap).
    "python-docx",
    "pypdf",
    # Multipart form parsing for base-resume + font uploads via the UI (zero-CLI).
    "python-multipart",
    # Wave-one master aggregator over the easy boards (LinkedIn/Indeed/Glassdoor/
    # Google/ZipRecruiter), zero-LLM structured scraping (FR-DISC-2/4). The real
    # JobSpy/SearXNG calls sit behind a marked network boundary; the default test
    # lane stays offline (the live source is integration-gated).
    "python-jobspy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-bdd",
    "pytest-asyncio",
    "pytest-cov",
    "httpx",
    "ruff",
]

# uv's native dev group so `uv sync --dev` installs the test toolchain.
[dependency-groups]
dev = [
    "pytest",
    "pytest-bdd",
    "pytest-asyncio",
    "pytest-cov",
    "httpx",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/applicant"]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
bdd_features_base_dir = "tests/bdd/features"
markers = [
    "unit: pure-core / fast unit tests (no I/O)",
    "contract: adapter contract tests against a port",
    "integration: app-boot / cross-component integration tests",
    "bdd: pytest-bdd acceptance scenarios (master spec §10 anchors)",
]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# E501: line length handled by formatter; B008: FastAPI Depends() default is idiomatic;
# UP042: str-Enum mixin is intentional (JSON-serializable enums across the wire).
ignore = ["E501", "B008", "UP042"]
