[project]
name = "applicant"
version = "0.1.0"
description = "Applicant — autonomous, human-in-the-loop job-application agent (hexagonal core)."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "MIT" }
authors = [{ name = "Applicant" }]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy>=2",
    "alembic",
    "psycopg[binary]",
    "pydantic",
    "pydantic-settings",
    "structlog",
    "httpx",
    # Durable orchestration backbone (FR-DUR-3). Installs cleanly on 3.11.
    # The DEFAULT durable_orchestration adapter is a DB/file-backed checkpoint
    # shim (works without a running Postgres, so the test suite is green);
    # the DBOS-backed adapter is selected in real deployments.
    "dbos",
    # LangGraph is the reasoning loop *within* durable steps (architecture §3.15).
    "langgraph",
    # Base-resume parsing for the onboarding attribute-cloud bootstrap (FR-ONBOARD-3).
    # python-docx parses .docx; pypdf is a pure-python PDF text extractor (cheap).
    "python-docx",
    "pypdf",
    # Multipart form parsing for base-resume + font uploads via the UI (zero-CLI).
    "python-multipart",
    # Wave-one master aggregator over the easy boards (LinkedIn/Indeed/Glassdoor/
    # Google/ZipRecruiter), zero-LLM structured scraping (FR-DISC-2/4). The real
    # JobSpy/SearXNG calls sit behind a marked network boundary; the default test
    # lane stays offline (the live source is integration-gated).
    "python-jobspy",
    # Multi-channel notification dispatch (FR-NOTIF-1): Discord, email/SMTP, web,
    # and 80+ services behind one URL grammar. The real send sits behind a marked
    # network boundary in the AppriseNotifier; the default test lane uses a
    # capturing sink (no network), and live Discord/SMTP tests are integration-gated.
    "apprise",
    "pynacl>=1.6.2",
    # Templating for the real docx->moderncv LaTeX conversion (FR-RESUME-3/3a): the
    # parsed base resume is rendered into a real moderncv ".tex" source via the
    # vendored templates/latex/moderncv/main.tex.j2 template. Pure-python, no I/O.
    "jinja2>=3.1.6",
]

[project.optional-dependencies]
# Real browser automation (FR-PREFILL-1, FR-STEALTH-1). patchright is a Playwright
# fork that strips automation/headless tells. Kept OPTIONAL so the DEFAULT test lane
# (FakePageSource) needs NO browser binary; install with `uv sync --extra browser`
# and `patchright install chromium` to drive the real adapter (integration-only).
browser = [
    "patchright",
]
dev = [
    "pytest",
    "pytest-bdd",
    "pytest-asyncio",
    "pytest-cov",
    "httpx",
    "ruff",
]

# uv's native dev group so `uv sync --dev` installs the test toolchain.
[dependency-groups]
dev = [
    "pytest",
    "pytest-bdd",
    "pytest-asyncio",
    "pytest-cov",
    "httpx",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/applicant"]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
bdd_features_base_dir = "tests/bdd/features"
markers = [
    "unit: pure-core / fast unit tests (no I/O)",
    "contract: adapter contract tests against a port",
    "integration: app-boot / cross-component integration tests",
    "bdd: pytest-bdd acceptance scenarios (master spec §10 anchors)",
]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
# ``workspace/`` is a vendored self-hosted UI app (its own repo/toolchain). It is
# an opaque build context for Applicant's image, not part of our lint/test surface.
extend-exclude = ["workspace"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# E501: line length handled by formatter; B008: FastAPI Depends() default is idiomatic;
# UP042: str-Enum mixin is intentional (JSON-serializable enums across the wire).
ignore = ["E501", "B008", "UP042"]
