[project]
name = "applicant"
version = "0.1.0"
description = "Applicant — autonomous, human-in-the-loop job-application agent (hexagonal core)."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [{ name = "Applicant" }]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy>=2",
    "alembic",
    "psycopg[binary]",
    "pydantic",
    # >=2.14.2 fixes a path-traversal advisory (GHSA-4xgf-cpjx-pc3j).
    "pydantic-settings>=2.14.2",
    "structlog",
    "httpx",
    # LangGraph is the reasoning loop *within* durable steps (architecture §3.15).
    "langgraph",
    # Base-resume parsing for the onboarding attribute-cloud bootstrap (FR-ONBOARD-3).
    # python-docx parses .docx; pypdf is a pure-python PDF text extractor (cheap).
    # pypdf >=6.14.2 clears two advisories incl. GHSA-jm82-fx9c-mx94.
    "python-docx",
    "pypdf>=6.14.2",
    # Multipart form parsing for base-resume + font uploads via the UI (zero-CLI).
    "python-multipart",
    # Wave-one master aggregator over the easy boards (LinkedIn/Indeed/Glassdoor/
    # Google/ZipRecruiter), zero-LLM structured scraping (FR-DISC-2/4). The real
    # JobSpy/SearXNG calls sit behind a marked network boundary; the default test
    # lane stays offline (the live source is integration-gated).
    "python-jobspy",
    # Multi-channel notification dispatch (FR-NOTIF-1): Discord, email/SMTP, web,
    # and 80+ services behind one URL grammar. The real send sits behind a marked
    # network boundary in the AppriseNotifier; the default test lane uses a
    # capturing sink (no network), and live Discord/SMTP tests are integration-gated.
    "apprise",
    "pynacl>=1.6.2",
    # Templating for the real docx->moderncv LaTeX conversion (FR-RESUME-3/3a): the
    # parsed base resume is rendered into a real moderncv ".tex" source via the
    # vendored templates/latex/moderncv/main.tex.j2 template. Pure-python, no I/O.
    "jinja2>=3.1.6",
    "fastapi-mcp>=0.4.0",
    "agentlab>=0.4.2",
    "browsergym>=0.14.2",
]

[project.optional-dependencies]
# Real browser automation (FR-PREFILL-1, FR-STEALTH-1). The DEFAULT engine is
# camoufox — a Firefox-based anti-detect browser that injects its own coherent
# fingerprint; the `geoip` extra ships the dataset that pins geolocation/timezone/
# locale to the exit IP (FR-STEALTH-4). patchright (a Playwright fork that strips
# automation/headless tells) is the `chromium` fallback engine and drives the
# Proxmox Windows CDP backend (remote real Chrome). Kept OPTIONAL so the DEFAULT
# test lane (FakePageSource) needs NO browser binary; install with
# `uv sync --extra browser`, then `camoufox fetch` (and, for the chromium engine,
# `patchright install chromium`) to drive the real adapter (integration-only).
browser = [
    "camoufox[geoip]",
    "patchright",
]
# Durable orchestration backbone (FR-DUR-3). The DEFAULT runtime backend is the
# file-backed checkpoint SHIM (``ORCHESTRATOR_BACKEND=shim``), which needs NO extra
# package and works without a running Postgres — so air-gapped / offline installs
# boot on the shim out of the box. DBOS is only required when a deployment opts into
# ``ORCHESTRATOR_BACKEND=dbos`` (needs a live Postgres). The adapter imports ``dbos``
# lazily, so the engine boots fine without it installed. Install with
# ``uv sync --extra durable-orchestration`` to enable the DBOS backend.
durable-orchestration = [
    "dbos",
]
# MCP (Model Context Protocol) server surface (Issue #308). Exposes the engine
# as an MCP server via fastapi_mcp so external agents can discover and invoke
# the same guarded application services through the MCP tool protocol.
# Install with uv sync --extra mcp.
mcp = [
    "fastapi-mcp",
]
dev = [
    "pytest",
    "pytest-bdd",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-xdist",
    "httpx",
    "ruff",
    "import-linter",
]

# uv's native dev group so `uv sync --dev` installs the test toolchain.
[dependency-groups]
dev = [
    "pytest",
    "pytest-bdd",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-xdist",
    "httpx",
    "ruff",
    "import-linter",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/applicant"]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
bdd_features_base_dir = "tests/bdd/features"
markers = [
    "unit: pure-core / fast unit tests (no I/O)",
    "contract: adapter contract tests against a port",
    "integration: app-boot / cross-component integration tests",
    "bdd: pytest-bdd acceptance scenarios (master spec §10 anchors)",
    "pending: enhancement BDD spec not yet implemented (tag mapped to xfail; TDD red)",
    "architecture: import-linter structural boundary tests (NFR-ARCH-1)",
]
addopts = "-ra --strict-markers -n auto"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
# ``workspace/`` is a vendored self-hosted UI app (its own repo/toolchain). It is
# an opaque build context for Applicant's image, not part of our lint/test surface.
extend-exclude = ["workspace"]

# NFR-ARCH-1: CI-enforced hexagonal layer boundary (import-linter Option A).
# Verified read-only against the real import graph; passes green today.
# One sanctioned exception: Alembic migration env reads app.config.
[tool.importlinter]
root_packages = ["applicant"]
include_external_packages = true

[[tool.importlinter.contracts]]
name = "Hexagonal layering (app > application > adapters > ports > core)"
type = "layers"
layers = [
    "applicant.app",
    "applicant.application",
    "applicant.adapters",
    "applicant.ports",
    "applicant.core",
]
# Note: adapters/storage/alembic/env.py has a conditional (lazy) import of
# app.config.get_settings — import-linter's static graph does not see lazy
# imports, so no ignore_imports entry is needed here.

[[tool.importlinter.contracts]]
name = "Core domain is pure (no outward imports)"
type = "forbidden"
source_modules = ["applicant.core"]
forbidden_modules = [
    "applicant.adapters",
    "applicant.application",
    "applicant.app",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# E501: line length handled by formatter; B008: FastAPI Depends() default is idiomatic;
# UP042: str-Enum mixin is intentional (JSON-serializable enums across the wire).
ignore = ["E501", "B008", "UP042"]
